@@ -13,6 +13,7 @@ DEFAULT_VIDEOS = True
 DEFAULT_MUSIC_VOLUME = 1.0
 DEFAULT_SOUND_VOLUME = 1.0
 DEFAULT_ATMO_VOLUME = 1.0
+DEFAULT_MASTER_VOLUME = 1.0
 
 # Controllers
 DEFAULT_VIBRATION = True
